css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*--- Fonts ---*/
@font-face {
  font-family: phattFont;
  src: url(phatt_font.otf);
}

@font-face {
  font-family: phattOutline;
  src: url(phatt_outline.otf);
}

@font-face {
  font-family: kaushanFont;
  src: url(KaushanScript-Regular.ttf);
}

/*--- HTML Elements ---*/
body {
  padding-bottom: 270px;
  min-height: 100vh;
  position: relative;
  font-size: larger;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

h1 {
  font-family: phattFont;
  text-align: center;
  font-size: 2.3vh;
}

h2 {
  font-family: phattFont;
  text-align: center;
}

footer {
  background-color: #434343;
  position:absolute;
  bottom: 0;
  width: 100%;
  padding: 40px;
  text-align: center;
  color: white;
  font-size: smaller;
  border-top: 3px solid black;    
}

main {
  margin: 0 auto;
  text-align: center;
  padding-left: 30px;
  padding-right: 30px;
}

/*--- Classes ---*/
.logo {
  width: 12vh;
  display: block;
  margin: 10px auto 10px auto;
}

.collage-background {   
  margin: 0 auto;
  text-align: center;
  background-image: url('../images/SMMA\ Collage\ 2.png');
  background-size: auto;
}

.headerLogo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}

.mainImg {
  max-width: 70%;
  height: 15%;
  margin: 5px auto 10px auto;
  display: block;
  border-radius: 8px;
  border: 3px solid black;
}

.wesImg {
  border: 3px solid black;
  border-radius: 6px;
  width: 40%;
}

.home-background {
  background-color: white;
  width: 70vw;
  padding: 10px;
  margin-left: auto;
  margin-right: auto;
  border-left: 1px solid black;
  border-right: 1px solid black;
}

/*--- Navigation ---*/
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #434343;
  border-top: 3px solid black;
  border-bottom: 3px solid black;
  text-align: center;
}

li {
  display: inline-block;
  font-family: phattFont;
}
  
li a {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 18px 30px;
  text-decoration: none;
}
  
li a:hover {
  background-color: #2a90dd;
  color: black;
}

img {
  width: 100%;
}

/*--- Tables and Containers ---*/

.flex-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  background-color: #9a9a9a;
  padding: 30px;
  border-radius: 8px;
  border: 3px solid black;
}

table, th, td {
  border: 3px solid black;
}

table {
  border-collapse: collapse;
}

th, td {
  padding: 10px;
  font-size: larger;
}

th {
  background-color: #2a90dd;
  color: white;
  font-family: phattFont;
}

.plainTable {
  border: none;
  margin-left: auto;
  margin-right: auto;
}

/* --- Gallery --- */

div.gallery {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  border: 1px solid black;
  background-color: lightgrey;
  border-radius: 8px;
  padding: 10px;
  max-width: 70%;
  margin-left: auto;
  margin-right: auto;
}

div.gallery img, video {
  border: 1px solid black;
  max-width: 20%;
  height: auto;
  align-self: center;
  margin: auto;
  margin: 10px;
}

/*--- Screen Sizes ---*/
@media only screen and (max-width: 768px) {

  .mainImg {
    max-width: 100%;
    margin: 2px auto 10px auto;
    display: block;
    border-radius: 6px;
    border: 2px solid black;
  }

  .headerLogo {
    width: 75%;
  }

  .wesImg {
    width: 80%;
  }

  li {
    font-size: smaller;
  }

  .plainTable {
    margin: 15px;
    font-size: smaller;
  }

  li {
    display: block;
  }

  li a {
    width: 100%;
  }

  div.gallery img, video {
    max-width: 70%;
  }

  div.gallery {
    flex-direction: column;
  }
  
}

@media only screen and (min-width: 1200px) {
  .mainImg {
    max-width: 55%;
  }

  .headerLogo {
    max-width: 45%;
  }
}

